# RugPullCoin

./: CMakeLists.txt  README.md
include/: Block.h  Blockchain.h  Transaction.h  Wallet.h
src/: Block.cpp  Blockchain.cpp  Transaction.cpp  Wallet.cpp  main.cpp
